--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -21,7 +21,7 @@
     <string name="tabLogs">Loggar</string>
     <string name="tabLogsDescription">Visa och spara/skicka loggar från Xposed-ramverket.</string>
     <string name="tabAbout">Om</string>
-    <string name="tabAboutDescription">Lär dig mer om personerna som skapade Xposed, vart support för denna app etc finns.</string>
+    <string name="tabAboutDescription">Lär dig mer om personerna som skapade Xposed, vart man kan få hjälp med denna app, etc.</string>
 
     <!-- Installer tab -->
     <string name="install">Installera/Uppdatera</string>
@@ -35,62 +35,62 @@
     <string name="areyousure">Är du säker?</string>
     <string name="phone_not_compatible">Xposed är inte (ännu) kompatibel med Android SDK version %1$d eller med din processor arkitektur (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed har inte blivit testad med Android SDK version %d, men den verkar vara kompatibel. Du kan testa att installera ändå om du känner dig modig.</string>
-    <string name="reboot_failed">Omstart misslyckades. Använd enhetens normala omstartsfunktion.</string>
-    <string name="auto_flash_note">%s borde bli flashad automatiskt när du trycker "OK".</string>
-    <string name="manual_flash_note">Flasha %s från SD-kortet för att slutföra operationen.</string>
+    <string name="reboot_failed">Omstart misslyckades. Använd enhetens vanliga omstartsfunktion.</string>
+    <string name="auto_flash_note">%s borde flashas automatiskt när du trycker "OK".</string>
+    <string name="manual_flash_note">Flasha %s från SD-kortet för att slutföra proceduren.</string>
     <string name="reboot_confirmation">Vill du starta om nu?</string>
     <string name="reboot_recovery_confirmation">Vill du starta om till recovery nu?</string>
-    <string name="install_warning_title">Försiktig!</string>
-    <string name="install_warning">I vissa fall, kan din enhet inte längre starta om efter man har installerat Xposed.\n\nOm du inte har hört talas om \"soft brick\" och \"bootloop\" förut eller inte vet hur du återställer efter en sådan situation, installera <b>INTE</b> Xposed!\n\nFör säkerhets skull, rekommenderas det starkt att ha en nyligen gjord backup tillgänglig.</string>
+    <string name="install_warning_title">Var försiktig!</string>
+    <string name="install_warning">I vissa fall kan din enhet inte längre starta efter att du installerat Xposed.\n\nOm du aldrig hört talats om \"soft brick\" och \"bootloop\" förut eller om du inte vet hur du tar dig ur en sådan situation, installera <b>INTE</b> Xposed!\n\nFör säkerhets skull rekommenderas det starkt att ha en nyligen gjord backup tillgänglig.</string>
     <string name="dont_show_again">Visa inte detta igen</string>
-    <string name="install_known_issue">Det verkar finnas ett känt problem (\"%s\") med din ROM. Installation av Xposed kanske inte fungerar eller leder till omfattande problem. Klicka här för detaljer om problemet.</string>
-    <string name="install_reverted">app_process version \"%1$s\" har installerats tidigare men version \"%2$s\" hittades nu. Om du inte förväntade dig att återställa en gammal fil, kanske du vill prova installera via recovery (auto eller manual).</string>
-    <string name="uninstall_reverted">app_process var avinstallerad tidigare men version \"%s\" hittades nu. Om du inte förväntade dig att återställa en gammal fil, kanske du vill prova installera via recovery (auto eller manual).</string>
+    <string name="install_known_issue">Det verkar finnas ett känt problem (\"%s\") med din ROM. Att installera Xposed kanske inte fungerar eller kan leda till allvarliga problem. Klicka här för detaljer om problemet.</string>
+    <string name="install_reverted">app_process version \"%1$s\" har installerats tidigare men version \"%2$s\" hittades nu. Om du inte förväntade dig att återställa en gammal fil så vill du kanske prova att installera via recovery (automatiskt eller manuellt).</string>
+    <string name="uninstall_reverted">app_process avinstallerades tidigare men version \"%s\" hittades nu. Om du inte förväntade dig att återställa en gammal fil så vill du kanske pröva att avinstallera via recovery (automatiskt eller manuellt)</string>
     <string name="tap_to_dismiss">Tryck för att avvisa</string>
     <string name="sdcard_location">SD-kort: %s</string>
 
     <!-- File operations -->
-    <string name="root_failed">Misslyckades att få root-åtkomst.\n\nFörsäkra dig att enheten är rootad ordentligt och att du inte har blockerat shell-kommandon.</string>
+    <string name="root_failed">Misslyckades med att få root-åtkomst.\n\nFörsäkra dig om att din enhet är rootad ordentligt och att du inte har blockerat shell-kommandon.</string>
     <string name="file_extract_failed">Kunde inte extrahera %s</string>
-    <string name="file_mounting_writable">Mountering %s skrivbar&#8230;</string>
-    <string name="file_mount_writable_failed">Kunde inte mountera %s som skrivbar</string>
-    <string name="file_trying_to_continue">Försök att fortsätta ändå&#8230;</string>
-    <string name="file_backup_already_exists">Backup finns redan %s</string>
-    <string name="file_backup_not_found">Ingen backup hittades %s</string>
-    <string name="file_backup_failed">Misslyckades att skapa backup av %s</string>
-    <string name="file_backup_successful">Skapade backup %s</string>
+    <string name="file_mounting_writable">Monterar %s skrivbar&#8230;</string>
+    <string name="file_mount_writable_failed">Kunde inte montera %s som skrivbar</string>
+    <string name="file_trying_to_continue">Försöker fortsätta ändå&#8230;</string>
+    <string name="file_backup_already_exists">Backup finns redan vid %s</string>
+    <string name="file_backup_not_found">Ingen backup hittades vid %s</string>
+    <string name="file_backup_failed">Kunde inte göra en backup av %s</string>
+    <string name="file_backup_successful">Skapade backup vid %s</string>
     <string name="file_backup_restoring">Återställer backup från %s</string>
     <string name="file_copying">Kopierar %s&#8230;</string>
     <string name="file_copy_failed">Kunde inte kopiera %1$s till %2$s</string>
     <string name="file_move_failed">Kunde inte flytta %1$s till %2$s</string>
-    <string name="file_set_perms_failed">Kunde inte sätta rättigheter för %s</string>
+    <string name="file_set_perms_failed">Kunde inte sätta behörigheter för %s</string>
     <string name="file_set_owner_failed">Kunde inte sätta ägare för %s</string>
     <string name="file_removing">Tar bort %s&#8230;</string>
     <string name="file_remove_failed">Kunde inte ta bort %s</string>
-    <string name="file_creating_directory">Skapar mappen %s&#8230;</string>
-    <string name="file_create_directory_failed">Kunde inte skapa mappen %s</string>
-    <string name="file_writing_recovery_command">Skriver recovery-kommando&#8230;</string>
-    <string name="file_writing_recovery_command_failed">Skrivning av recovery-kommando misslyckades. Använd en annan installationsmetod.</string>
-    <string name="file_done">Klar! Ändringarna kommer att aktiveras vid omstart.</string>
+    <string name="file_creating_directory">Skapar mapp %s&#8230;</string>
+    <string name="file_create_directory_failed">Kunde inte skapa mapp %s</string>
+    <string name="file_writing_recovery_command">Skriver återställningskommando&#8230;</string>
+    <string name="file_writing_recovery_command_failed">Skrivning av återställningskommando misslyckades. Använd en annan installationsmetod.</string>
+    <string name="file_done">Klar! Ändringar kommer att aktiveras vid omstart.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed modulen är inte aktiverad ännu</string>
-    <string name="module_is_not_activated_yet_detailed">%s är installerad, men inte aktiverad ännu.</string>
+    <string name="module_is_not_activated_yet_detailed">%s har installerats, men är inte aktiverad ännu.</string>
     <string name="activate_and_reboot">Aktivera och starta om</string>
-    <string name="module_activated">Xposed-modul har aktiverats</string>
+    <string name="module_activated">Xposed-modulen har aktiverats</string>
     <string name="module_empty_description">(ingen beskrivning given)</string>
     <string name="module_no_ui">Denna modul tillhandahåller inte ett användargränssnitt</string>
     <string name="no_xposed_modules_found">Inga Xposed-moduler hittades!</string>
-    <string name="xposed_module_list_updated">Xposed-modullistan uppdaterades\nFörändringarna kommer att aktiveras vid omstart</string>
+    <string name="xposed_module_list_updated">Xposed-modullistan uppdaterades\nÄndringar kommer att aktiveras vid omstart</string>
     <string name="xposed_module_updated_notification_title">Xposed-modul uppdaterad</string>
     <string name="xposed_module_updated_notification">Starta om för att aktivera ändringar</string>
-    <string name="warning_xposed_min_version">Denna modul kräver en nyare XposedBridge-version (%d) och kan sålunda inte aktiveras.</string>
-    <string name="no_min_version_specified">Denna modul specificerar inte den XposedBridge-version som behövs.</string>
-    <string name="warning_min_version_too_low">Denna modul skapades för XposedBridge-version %1$d, men på grund av oförenliga förändringar i version %2$d, har den avaktiverats.</string>
+    <string name="warning_xposed_min_version">Denna modul kräver en nyare version av XposedBridge (%d) och kan därför inte aktiveras.</string>
+    <string name="no_min_version_specified">Denna modul specificerar inte vilken version av XposedBridge som behövs.</string>
+    <string name="warning_min_version_too_low">Denna modul skapades för version %1$d av XposedBridge, men på grund av inkompatibla förändringar i version %2$d har den avaktiverats.</string>
     <string name="module_launch">Starta användargränssnitt</string>
     <string name="module_download_updates">Ladda ner/Uppdateringar</string>
-    <string name="module_support">Support</string>
-    <string name="module_app_info">App-info</string>
+    <string name="module_support">Stöd</string>
+    <string name="module_app_info">Appinfo</string>
     <string name="module_uninstall">Avinstallera</string>
 
     <!-- Download tab -->
@@ -103,7 +103,7 @@
     <string name="reltype_stable">Stabil</string>
     <string name="reltype_stable_summary">Stabil (liten risk för buggar)</string>
     <string name="reltype_beta">Beta</string>
-    <string name="reltype_beta_summary">Beta (några buggar förväntas)</string>
+    <string name="reltype_beta_summary">Beta (vissa buggar förväntas)</string>
     <string name="reltype_experimental">Experimentell</string>
     <string name="reltype_experimental_summary">Experimentell (hög risk för buggar)</string>
     <string name="reltype_use_global_summary">Använd global inställning</string>
@@ -126,23 +126,22 @@
     <string name="download_section_older">Mer än 30 dagar sedan</string>
     <string name="download_details_not_found">Det finns ingen modul med paketnamnet \"%s\" i datakatalogen.</string>
     <string name="download_no_versions">Skaparen har inte laddat upp något ännu.</string>
-    <string name="download_test_version_not_shown">En test-version är tillgänglig, men visas inte eftersom dina globala eller modulspecifika inställningar.</string>
+    <string name="download_test_version_not_shown">En test-version finns tillgänglig, men den visas inte på grund av dina globala eller modulspecifika inställningar.</string>
 
     <!-- Settings tab -->
     <string name="settings_group_installation">Installation</string>
-    <string name="settings_install_mode">Installationsläge</string>
-    <string name="install_mode_normal">Klassisk (skriv direkt till /system)</string>
+    <string name="settings_install_mode">Installationssätt</string>
+    <string name="install_mode_normal">Klassiskt (skriv direkt till /system)</string>
     <string name="install_mode_recovery_auto">Recovery (flasha zip automatiskt)</string>
     <string name="install_mode_recovery_manual">Recovery (skriv zip till SD-kort, flasha manuellt)</string>
     <string name="settings_group_download">Ladda ner</string>
     <string name="settings_enable_downloads">Aktivera nedladdningar</string>
-    <string name="settings_enable_downloads_summary">Låt Xposed Installer att söka efter uppdateringar och nya moduler</string>
-    <string name="settings_release_type">Versioner som kommer att visas</string>
+    <string name="settings_enable_downloads_summary">Tillåt Xposed Installer att söka efter uppdateringar och nya moduler</string>
     <string name="settings_group_experimental">Experimentellt</string>
-    <string name="settings_disable_resources">Avaktivera resurs-hooks</string>
-    <string name="settings_disable_resources_summary">Tillfällig lösning för konfikter med temamotorerna\n<b>VARNING:</b> Moduler some försöker att byta resurser kommer inte att fungera när detta är aktiverat.</string>
+    <string name="settings_disable_resources">Avaktiverade resurs-hooks</string>
+    <string name="settings_disable_resources_summary">Tillfällig lösning för konflikter med temaverktyg\n<b>VARNING:</b> Moduler som försöker ändra resurser kommer inte fungera när detta är aktiverat.</string>
     <string name="settings_performance_experiment">Prestanda experiment</string>
-    <string name="settings_performance_experiment_summary">Om du aktiverar det här, kan systemets prestanda antingen öka, minska eller förbli densamma. Känn dig fri att prova och rapportera tillbaka vilken effekt du noterar (eller om det finns ingen alls). Du måste installera om ramverket och starta om efter att ha ändrat detta.</string>
+    <string name="settings_performance_experiment_summary">Om du aktiverar det här kan systemets prestanda antingen öka, minska eller förbli densamma. Känn dig fri att prova och rapportera tillbaka vilken effekt du får (eller om du inte får någon alls). Du måste installera om ramverket och starta om efter att ha ändrat detta.</string>
     <string name="settings_group_app">Applikation</string>
     <string name="settings_theme">Tema</string>
     <string name="settings_theme_light">Ljust</string>
@@ -151,45 +150,45 @@
 
     <!-- Logs tab  -->
     <string name="logs_load_failed">Kunde inte läsa loggen:</string>
-    <string name="logs_save_failed">Kunde inte skriva till loggen på SD-kortet:</string>
-    <string name="sdcard_not_writable">SD-kortet hittades inte eller är inte skrivbar</string>
-    <string name="log_too_large">Loggfil är större än %1$,d kB, hoppade över de första %2$,d kB</string>
-    <string name="menuClearLog">Nollställ logg nu</string>
-    <string name="logs_cleared">Logg nollställd utan problem</string>
-    <string name="logs_clear_failed">Kunde inte nollställa loggen:</string>
-    <string name="log_is_empty">Logg är tom</string>
+    <string name="logs_save_failed">Kunde inte skriva loggen till SD-kortet:</string>
+    <string name="sdcard_not_writable">SD-kortet hittades inte eller är inte skrivbart</string>
+    <string name="log_too_large">Loggfilen är större än %1$,d kB, hoppade över de första %2$,d kB</string>
+    <string name="menuClearLog">Rensa loggen nu</string>
+    <string name="logs_cleared">Loggen rensades</string>
+    <string name="logs_clear_failed">Kunde inte rensa loggen:</string>
+    <string name="log_is_empty">Loggen är tom</string>
 
     <!-- About tab -->
-    <string name="about_developers_label">Huvudsakliga utvecklare:</string>
+    <string name="about_developers_label">Huvudutvecklare:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> och <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
-    <string name="about_developers_warning">Vänligen kontakta oss <b>inte</b> direkt för support, använd länken nedan.</string>
+    <string name="about_developers_warning">Vänligen kontakta oss <b>inte</b> direkt för support, använd länken nedanför.</string>
     <string name="about_translator_label">Översättare:</string>
-    <string name="translator"><a href="http://forum.xda-developers.com/member.php?u=2364290">Fredro (Fredrik Lundberg) och Magnus Espersson</a></string>
-    <string name="about_version_label">Version av denna app:</string>
+    <string name="translator"><a href="http://forum.xda-developers.com/member.php?u=2364290">Fredro (Fredrik Lundberg)</a>, Magnus Espersson och <a href="http://lutic.org/">Anton Strömkvist</a></string>
+    <string name="about_version_label">Versionen av denna app:</string>
     <string name="about_source_label">Källkod:</string>
-    <string name="about_support_label">Få support här:</string>
-    <string name="about_support_warning">Denna länk är <b>bara</b> för installations appen och ramverket! Om du behöver hjälp med en modul, använd <b>inte</b> denna länk, kontakta utvecklaren för modulen istället.</string>
+    <string name="about_support_label">Få hjälp här:</string>
+    <string name="about_support_warning">Denna länk är <b>bara</b> för installationsappen och ramverket! Om du behöver hjälp med en modul, använd <b>inte</b> denna länk, kontakta modulens utvecklare istället.</string>
     <string name="about_libraries_label">Använda bibliotek:</string>
 
     <!-- DownloadView -->
     <string name="download_view_download">Ladda ner</string>
     <string name="download_view_install">Installera</string>
     <string name="download_view_cancel">Avbryt</string>
-    <string name="download_view_no_url">Ingen nerladdnings URL tillgänglig</string>
-    <string name="download_view_running">Nerladdning pågår (%1$,d av %2$,d kB)</string>
-    <string name="download_view_waiting">Nerladdning avvaktar</string>
-    <string name="download_view_successful">Nerladdning lyckades</string>
-    <string name="download_view_failed">Nerladdning misslyckades (fel %d)</string>
+    <string name="download_view_no_url">Ingen nerladdningslänk tillgänglig</string>
+    <string name="download_view_running">Nerladdningen pågår (%1$,d av %2$,d kB)</string>
+    <string name="download_view_waiting">Nerladdningen avvaktar</string>
+    <string name="download_view_successful">Nerladdningen lyckades</string>
+    <string name="download_view_failed">Nerladdningen misslyckades (fel %d)</string>
 
     <!-- DownloadUtils -->
-    <string name="download_md5sum_incorrect">MD5-summan är felaktig (nerladdade: %1$s, förväntade: %2$s)</string>
-    <string name="download_could_not_read_file">Kunde inte läsa nerladdade filen: %s</string>
-    <string name="download_no_valid_apk">Nerladdade filen är inte en giltlig APK-fil (eller är inkompatibel)</string>
-    <string name="download_incorrect_package_name">Paketnamnet är felaktig (nerladdade: %1$s, förväntade: %2$s)</string>
+    <string name="download_md5sum_incorrect">MD5-summan är felaktig (nerladdad: %1$s, förväntad: %2$s)</string>
+    <string name="download_could_not_read_file">Kunde inte läsa nerladdad fil: %s</string>
+    <string name="download_no_valid_apk">Den nerladdade filen är inte en giltlig APK-fil (eller inkompatibel)</string>
+    <string name="download_incorrect_package_name">Paketnamnet är felaktigt (nerladdat: %1$s, förväntat: %2$s)</string>
 
     <!-- RepoLoader -->
     <string name="repo_download_failed_http">Nerladdning av %1$s misslyckades: %2$d (%3$s)</string>
-    <string name="repo_download_failed">Nerladdning av %1$s misslyckades: %2$s</string>
+    <string name="repo_download_failed">Att ladda ner %1$s misslyckades: %2$s</string>
     <string name="repo_load_failed">Kan inte ladda datakatalog från %1$s:\n%2$s</string>
 
 </resources>
