PT-BR translator Twitter correction

--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -164,7 +164,7 @@
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> e <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">Por favor <b>não</b> nos contate diretamente para obter suporte, use o link abaixo.</string>
     <string name="about_translator_label">Tradutor:</string>
-    <string name="translator">Marcio Andrade @marciozom13</string>
+    <string name="translator">Marcio Andrade @marciozomb13</string>
     <string name="about_version_label">Versão deste app:</string>
     <string name="about_source_label">Código fonte:</string>
     <string name="about_support_label">Obtenha suporte em:</string>
